--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.2",
+    "sweetalert2": "^11.6.10",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
