--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "antd": "^4.24.2",
     "axios": "^1.1.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.2",
     "sweetalert2": "^11.6.10",
